--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class="odd-elem">Number 1 - I'm a class!</p>
-    <div id="2">Number 2 - I'm one ID.</div>
+    <div id="two">Number 2 - I'm one ID.</div>
     <p class="odd-elem cool">Number 3 - I'm a class, but cooler!</p>
-    <div id="4">Number 4 - I'm another ID.</div>
+    <div id="four">Number 4 - I'm another ID.</div>
     <p class="odd-elem">Number 5 - I'm a class!</p>
   </body>
 </html>
